# databricks-learning

./: README.md  pyproject.toml
bundle/: databricks.yaml
bundle/resources/jobs/: serverless_job.yaml
bundle/src/databricks_learning/: __init__.py  simple.py
tests/: test_simple.py
